[package]
name = "clearstreet"
version = "0.1.22"
edition = "2024"
authors = ["Tradecrit", "Dallin Wright"]
rust-version = "1.86.0"
description = "Clear Street SDK for Rust"
license-file = "LICENSE"

[features]
default = []

[dependencies]
rust_decimal = "1.37.1"

tokio = { version = "1.45.0", features = ["full", "sync"]}
futures-util = "0.3.31"

reqwest = { version = "0.12.15", features = ["rustls-tls", "json"]}
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v7"] }

tokio-tungstenite = { version = "0.26.2", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "rustls-pki-types",
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
    "connect",
] }

dotenvy = "0.15.7"
mockito = "1.7.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
