[package]
name = "clearstreet"
version = "0.1.26"
edition = "2024"
authors = ["Tradecrit", "Dallin Wright"]
rust-version = "1.86.0"
description = "Clear Street SDK for Rust"
license-file = "LICENSE"

[features]
default = ["async"]
# async: reqwest without blocking
async = ["reqwest/json", "reqwest/rustls-tls"]
# sync: reqwest with blocking added
sync = ["async", "reqwest/blocking"]

[dependencies]
reqwest = { version = "0.12.19", optional = true, default-features = false }

tracing = "0.1.41"

# parsing and structuring
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"

# async runtime and websocket support
tokio = { version = "1.45.0", features = ["full", "sync"]}
futures-util = "0.3.31"
tokio-tungstenite = { version = "0.26.2", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "rustls-pki-types",
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
    "connect",
] }
tungstenite = { version = "0.26.2", features = ["native-tls", "rustls-native-certs", "rustls-pki-types", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }

# testing and development
async-trait = "0.1.88"
