[package]
name = "clearstreet"
version = "0.1.40"
edition = "2024"
authors = ["Tradecrit", "Dallin Wright"]
rust-version = "1.86.0"
description = "Clear Street SDK for Rust"
license-file = "LICENSE"

[features]
default = ["async"]
# async: reqwest without blocking
async = ["reqwest/json", "reqwest/rustls-tls"]
# sync: reqwest with blocking added
sync = ["async", "reqwest/blocking"]

[dependencies]
reqwest = { version = "0.12", optional = true, default-features = false }
tracing = "0.1"
serde = { version = "1", features = ["derive", "serde_derive"] }
serde_json = "1"

# async runtime and websocket support
tokio = { version = "1", features = ["full", "sync"]}
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", default-features = false, features = [
    "rustls",
    "rustls-native-certs",
    "rustls-pki-types",
    "rustls-tls-native-roots",
    "rustls-tls-webpki-roots",
    "connect",
] }

tungstenite = { version = "0.27", features = ["native-tls", "rustls-native-certs", "rustls-pki-types", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }

# testing and development
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4"}
